# FPL_agent

./: .gitignore  CONFIG.md  FPL_analysis.md  README.md  analysis.py  analysis_engine.py  app.py  data_fetcher.py  data_storage.py  database_connection.py  db.py  fpl_analyst.py  fpl_data.db-journal  load_fixture_data.py  load_historic_data.py  models.py  predictions.py  pyproject.toml  queries.py  report_generator.py  requirements.txt  routes.py  test_analysis.py  test_haaland_code.py  test_predictions.py  update_player_history_nulls.py
.github/: copilot-instructions.md
data/: fpl.db  fpl_agent.db  useful_queries.sqlite3-query
docs/: FINAL_PREDICTIONS.md  FINAL_PREDICTIONS_SUMMARY.md  HISTORIC_DATA.md  PLAYER_SUMMARY_TABLE.md  QUICK_REFERENCE_PREDICTIONS.md
fpl_agent/: __init__.py  api_client.py  app.py  calculation.py  data_storage.py  database.py  database_connection.py  formatting.py  main.py  models.py  optimizer.py  pipeline.py  predictions.py  queries.py  routes.py  top_performers.py  transfer_optimizer.py  transfers.py  update_db.py  validation.py
models/: player_points_predictors.pkl
research/: api_data_check.ipynb
scripts/: create_best_team.py  initialize_database.py  list_top_performers.py  load_fixture_data.py  load_historic_data.py  load_historic_gameweek_data.py  optimize_transfers.py  refresh_player_summary.py  update_database.py  update_player_history_nulls.py  validate_predictions.py
src/: app.py  data_storage.py  database_connection.py  db.py  load_fixture_data.py  load_historic_data.py  models.py  predictions.py  queries.py  routes.py
templates/: home.html  null_values.html  player_history.html  players.html  teams.html
tests/: conftest.py  test_haaland_code.py  (+3 more)
(+14 files in other folders)
