[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-agent"
version = "0.1.0"
description = "FPL Agent for data collection and analysis"
dependencies = [
    "pandas",
    "requests"
]

[project.scripts]
update_db = "load_historic_data:main"