[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-agent"
version = "0.1.1"
description = "FPL Agent for data collection and analysis"
dependencies = [
    "pandas",
    "requests"
]

[tool.setuptools.packages.find]
where = ["fpl_agent"]

[project.scripts]
app = "fpl_agent.app:main"
update_db = "fpl_agent.update_db:main"
