[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-agent"
version = "0.2.0"
description = "FPL Agent Library with Flask Backend and Dash Frontend"
dependencies = [
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "scikit-learn>=1.0.0",
    "pulp>=2.7.0",
    "PyYAML>=6.0.0"
]
optional-dependencies = {
    "backend" = [
        "Flask>=2.3.0",
        "Flask-CORS>=4.0.0"
    ],
    "frontend" = [
        "dash>=2.14.0",
        "dash-bootstrap-components>=1.5.0",
        "plotly>=5.17.0"
    ],
    "dev" = [
        "pytest>=7.0.0",
        "pytest-cov>=4.0.0",
        "black>=23.0.0",
        "flake8>=6.0.0"
    ]
}

[tool.setuptools.packages.find]
where = ["fpl_agent"]

[project.scripts]
fpl-backend = "backend.app:main"
fpl-frontend = "frontend.app:main"
fpl-update-db = "fpl_agent.database.update:main"
